# fluxstate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  changelog.py  dev-kid.yml  example.py  flux_cli.py  fluxstate.py  fluxstate_fixed.py  mirror_validator.py  pyproject.toml  reconstruct.py  tasks.md  test_fluxstate_validator.py
.claude/: activity_stream.md  watchdog.pid
.claude/hooks/: handoff-notifier.sh  post-tool-use-failure.sh  post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  task-completed.sh  user-prompt-submit.sh
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Patient/: Proposal.html  Proposal.md  mirror_table_log.json  mirror_test.txt  patient_capture.py  patient_capture_2.py  update_checker.py
TESTS/: FluxStateValidatorTest.py  Unit_1.py  Unit_4.py  Unit_5.py  Unit_6.py  Unit_7.py  Unit_8.py  conftest.py  test_audit_regressions.py  test_capture_scale.py  test_changelog.py  test_cli.py  test_demo_fixture.py  test_idempotency.py  test_lifecycle.py  test_output_formats.py  test_parity_export.py  test_reconstruct.py  unit_1_mock.py
TESTS/legacy/: README.md  Unit_2.py  Unit_3.py
docs/: API.md  DATABRICKS.md  PHAROS_INTEGRATION.md  VISUALIZATIONS.md
docs/viewer/: fluxstate-5k-stress-test.html  fluxstate-daff-audit-render.html  fluxstate-design-decision.md  fluxstate-keep-or-drop-onepager.html  fluxstate-temporal-ghost-prototype.html  fluxstate-viewer-dev-spec.md
memory-bank/: CLAUDE.md  README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/private/gyasis/: activeContext.md  progress.md
prd/: fluxstate_changelog_pivot_2026-06-05.md  pluggable_storage_backends_2026-07-01.md
scripts/: Hcc_capture.py  PATIENT.py  demo_fixture.py  schema_churn_demo.py
skills/: README.md  fluxstate-capture.md  fluxstate-compare.md  fluxstate-timetravel.md  fluxstate.md
specs/001-changelog-first-pivot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-changelog-first-pivot/checklists/: requirements.md
specs/001-changelog-first-pivot/contracts/: changelog-store.md  manifest.schema.json  public-api.md
specs/002-fluxstate-temporal-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fluxstate-temporal-viewer/checklists/: requirements.md
specs/002-fluxstate-temporal-viewer/contracts/: cli.md  parity.schema.json  viewer-data.md
viewer/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
viewer/public/: demo.flux
viewer/src/: App.svelte  app.css
viewer/src/lib/: duckdb.ts  filter.svelte  inspector.svelte  reconstruct.ts  scrubber.svelte  static-view.svelte  static-view.ts  table.svelte  windowed-table.svelte
viewer/tests/: audit-2026-06-20.test.ts  decode-precision.test.ts  interaction.spec.ts  reconstruct.parity.test.ts  static-view.test.ts
viewer/tests/fixtures/: parity-ground-truth.json
