[tool.poetry]
name = "fluxstate"
version = "0.1.0"
description = ""
authors = ["gyasis <gyasis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.5.0"
orjson = "^3.10.7"
numpy = "^2.1.0"
pyarrow = "^17.0.0"
humanize = "^4.10.0"
tqdm = "^4.66.5"
# Pre-existing (undeclared) runtime dep: mirror_validator.py uses pydantic.BaseModel
# and __init__.py imports it unconditionally. Declared so a clean venv imports cleanly
# (SC-006). NOT a new P1 dependency — surfacing existing usage. See spec U3 remediation.
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
# Test-only: proves the .flux/ store is glob-readable by an external engine
# (STORE-3 / SC-007). NOT a runtime dependency — the runtime stays Polars + PyArrow.
duckdb = "^1.0"
pytz = "*"  # test-only: DuckDB needs it to read tz-aware timestamp parquet columns
faker = "*"  # test/demo-only: seeded value source for scripts/demo_fixture.py (US7)

[tool.poetry.scripts]
flux = "flux_cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
